--- a/scololo/app/views/users/home.html.erb
+++ b/scololo/app/views/users/home.html.erb
@@ -9,7 +9,12 @@
   		<input type="submit" value="déconnection" />
 	<% end %>
 <%else%> 
+	<p>
 	<a href="/users/login"> S'identifier </a>
+	</p>
+	<p>
+	<a href="/users/signin"> Créer un compte </a>
+	</p>
 <%end%>
 
 
